# aws-iot-device-sdk-cpp-v2

./: CMakeLists.txt
eventstreamrpc/include/aws/eventstreamrpc/: EventStreamClient.h
eventstreamrpc/source/: EventStreamClient.cpp
eventstreamrpc/tests/: EventStreamClientTest.cpp
ipc/: CMakeLists.txt
ipc/include/aws/greengrass/: GreengrassCoreIpcClient.h  GreengrassCoreIpcModel.h
ipc/include/aws/ipc/: GGCoreIpcClient.h  GGIpcClient.h  GGIpcModel.h  GreengrassCoreIpcClient.h  GreengrassCoreIpcModel.h
ipc/source/: DefaultConnectionConfig.cpp  GGCoreIpcClient.cpp  GGIpcClient.cpp  GGIpcModel.cpp  GreengrassCoreIpcClient.cpp  GreengrassCoreIpcModel.cpp
ipc/tests/: CMakeLists.txt  DefaultConnectionConfig.cpp  EchoClientTest.cpp  EchoTestRpcClient.cpp  EchoTestRpcModel.cpp  GGCoreIpcClientTest.cpp
ipc/tests/include/: EchoTestRpcClient.h  EchoTestRpcModel.h
ipc/tests/include/awstest/: EchoTestRpcClient.h  EchoTestRpcModel.h
tests/: CMakeLists.txt
